force-app/main/default/objects/Animal360_Risk_Rule__mdt/Animal360_Risk_Rule__mdt.object-meta.xml
<CustomObject>
    <description
  >Packaged metadata-driven rules used to evaluate welfare risk from observations.</description>
    <label>Animal360 Risk Rule</label>
    <pluralLabel>Animal360 Risk Rules</pluralLabel>
</CustomObject>