force-app/main/default/objects/Animal360_Risk_Rule__mdt/fields/Auto_Create_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Care_Plan__c</fullName>
    <description
  >Requests care-plan auto creation when the rule matches and automation is enabled.</description>
    <label>Auto Create Care Plan</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>