force-app/main/default/objects/Animal360_Risk_Rule__mdt/fields/Indicator_Key__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Key__c</fullName>
    <description
  >Optional indicator key that must match for the rule to fire.</description>
    <label>Indicator Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>