force-app/main/default/objects/Animal360_Risk_Rule__mdt/fields/Observed_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Observed_Picklist_Value__c</fullName>
    <description>Optional observed picklist value that must match.</description>
    <label>Observed Picklist Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>