force-app/main/default/objects/Animal360_Risk_Rule__mdt/fields/Requires_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Requires_Intervention__c</fullName>
    <description
  >Requires the observation intervention flag when selected.</description>
    <label>Requires Intervention</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>