force-app/main/default/objects/Animal360_Risk_Rule__mdt/fields/Result_Welfare_Risk__c.field-meta.xml
<CustomField>
    <fullName>Result_Welfare_Risk__c</fullName>
    <description
  >Welfare risk level assigned when the rule matches.</description>
    <label>Result Welfare Risk</label>
    <length>40</length>
    <type>Text</type>
</CustomField>