force-app/main/default/objects/Animal360_Risk_Rule__mdt/fields/Rule_Order__c.field-meta.xml
<CustomField>
    <fullName>Rule_Order__c</fullName>
    <description>Evaluation order for the rule.</description>
    <label>Rule Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>