force-app/main/default/objects/Animal360_Risk_Rule__mdt/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <description>Optional severity level that must match.</description>
    <label>Severity Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>